# radarr-api-rs

./: .openapi-generator-ignore  Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AddMovieMethod.md  AddMovieOptions.md  AlternativeTitle.md  AlternativeTitleApi.md  AlternativeTitleResource.md  ApiInfoApi.md  ApiInfoResource.md  ApplyTags.md  AuthenticationApi.md  AuthenticationRequiredType.md  AutoTaggingApi.md  AutoTaggingResource.md  AutoTaggingSpecificationSchema.md  BackupApi.md  BackupResource.md  BackupType.md  BlocklistApi.md  BlocklistResource.md  BlocklistResourcePagingResource.md  CalendarApi.md  CalendarFeedApi.md  CertificateValidationType.md  CollectionApi.md  CollectionMovieResource.md  CollectionResource.md  CollectionUpdateResource.md  ColonReplacementFormat.md  Command.md  CommandApi.md  CommandPriority.md  CommandResource.md  CommandResult.md  CommandTrigger.md  CreditApi.md  CreditResource.md  CreditType.md  CustomFilterApi.md  CustomFilterResource.md  CustomFormatApi.md  CustomFormatResource.md  (+141 more)
src/apis/: alternative_title_api.rs  api_info_api.rs  authentication_api.rs  auto_tagging_api.rs  backup_api.rs  blocklist_api.rs  calendar_api.rs  calendar_feed_api.rs  collection_api.rs  command_api.rs  configuration.rs  credit_api.rs  custom_filter_api.rs  custom_format_api.rs  delay_profile_api.rs  disk_space_api.rs  download_client_api.rs  download_client_config_api.rs  extra_file_api.rs  file_system_api.rs  health_api.rs  history_api.rs  host_config_api.rs  import_exclusions_api.rs  import_list_api.rs  import_list_config_api.rs  indexer_api.rs  (+43 more)
(+136 files in other folders)
