[package]
name = "radarr-api-rs"
version = "3.0.0"
authors = ["OpenAPI Generator team and contributors", "Jakub Szulc"]
description = "Rust API wrapper for Radarr"
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/j-szulc/radarr-api-rs"
repository = "https://github.com/j-szulc/radarr-api-rs"
readme = "README.md"
keywords = ["radarr"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
